fix issues -truncating setting icon on left sidebar -truncating tooltip of indicators on left sidebar

--- a/sass/components/_chart-controls.scss
+++ b/sass/components/_chart-controls.scss
@@ -175,7 +175,6 @@
 
     .ciq-menu {
         height: 54px;
-        margin-bottom: 16px;
 
         .stxMenuActive {
             @include themify($themes) {
